--- a/public/styles.css
+++ b/public/styles.css
@@ -30,3 +30,20 @@ input[type=submit] {
     margin: 4px 2px;
     border-radius: 10px;
 }
+
+.textdjango{
+    font: 30px Tahoma, sans-serif;
+    text-shadow: 0 1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;
+    position: relative;
+    text-align: center;
+    margin: 10%;
+}
+.textdjango::before{
+    content: '';
+    border-bottom: 1px solid #000;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 5%;
+    z-index: -1;
+}
